--- a/.github/workflows/PitchBlack-PBRP.yml
+++ b/.github/workflows/PitchBlack-PBRP.yml
@@ -152,7 +152,7 @@ jobs:
         cd android-recovery
         source build/envsetup.sh
         export ALLOW_MISSING_DEPENDENCIES=true
-        lunch pb_tapas-eng && mka pbrp
+        lunch pb_juice-eng && mka pbrp
 
     - name: Check Build Makefile
       run: |
